Dev Org/src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>AutoNumberTest__c</fullName>
        <displayFormat>{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>AutoNumberTest</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Competitor__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and can delete this field.</description>
        <label>DB Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Competitor A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor C</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryInstallationStatus__c</fullName>
        <label>Delivery/Installation Status</label>
        <picklist>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yet to begin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Funding_Group__c</fullName>
        <label>Funding Group</label>
        <picklist>
            <controllingField>Legal_Entity__c</controllingField>
            <picklistValues>
                <fullName>Union</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>State</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Entity__c</fullName>
        <label>Funding</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cheque</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MainCompetitors__c</fullName>
        <label>Main Competitor(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opty_Auto_Number__c</fullName>
        <formula>IF(TEXT(StageName) = &apos;Prospecting&apos;,  &apos;PR&apos;&amp;AutoNumberTest__c , 

IF(TEXT(StageName) = &apos;Qualification&apos;, &apos;QL&apos;&amp;AutoNumberTest__c,

IF(TEXT(StageName) = &apos;Needs Analysis&apos;, &apos;NA&apos;&amp;AutoNumberTest__c,

IF(TEXT(StageName) = &apos;Value Proposition&apos;, &apos;VP&apos;&amp;AutoNumberTest__c,
 &apos;Nothing&apos;)))
)</formula>
        <label>Opty Auto Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderNumber__c</fullName>
        <label>Order Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Power_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Power On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TrackingNumber__c</fullName>
        <label>Tracking Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Private</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.PRIVATE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Private</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
</CustomObject>